Mon Jun 28 22:24:37 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	- add odbc_dstr_copy and reuse it

Mon Jun 28 21:51:02 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix small and quite impossible leak

Sun Jun 27 18:51:00 CDT 2010	Craig A. Berry <craigberry@mac.com>
	* src/apps/bsqldb.c src/apps/bsqlodbc.c src/apps/defncopy.c
	* src/apps/fisql/fisql.c src/apps/freebcp.c src/apps/tsql.c
	- Zero local password memory after setting internal structures.
	- idea from Christos Zoulas <christos@zoulas.com>

Sun Jun 27 12:40:00 CDT 2010	Craig A. Berry <craigberry@mac.com>
	* include/tds.h src/apps/tsql.c src/tds/iconv.c src/tds/locale.c
	* src/tds/mem.c:
	- consolidated locale/client charset update

Sun Jun 27 07:58:00 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* Makefile.am configure.ac:
	- honour vms/Makefile.am removing duplications

Sat Jun 26 19:50:00 CDT 2010   Craig A. Berry <craigberry@mac.com>
	* Makefile.am, src/apps/defncopy.c, src/apps/fisql/fisql.c,
	* src/apps/freebcp.c, vms/Makefile.am, vms/config_h.vms,
	* vms/descrip_mms.template, vms/vargdefs.h, vms/vmsarg_command_bcp.cld,
	* vms/vmsarg_command_defncopy.cld, vms/vmsarg_command_isql.cld,
	* vms/vmsarg_mapping_bcp.c, ms/vmsarg_mapping_defncopy.c,
	* vms/vmsarg_mapping_isql.c, vms/vmsarg_parse.c
	- VMS-style native command syntax for fisql, freebcp, and defncopy

Sat Jun 26 11:14:37 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: fix a leak if cursor returns multiple resultsets

Sat Jun 26 10:03:51 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor2.c: remove warning

Sat Jun 26 09:23:34 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor2.c: add test for cursors on rpc

Sat Jun 26 09:19:45 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor2.c: reuse CheckCursor
