@@ -1,3 +1,6 @@
+Tue Jun 29 14:00:51 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/mem.c: use ISO-8859-1 if ASCII is detected
+
 Mon Jun 28 22:24:37 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
 	- add odbc_dstr_copy and reuse it
@@ -2534,4 +2537,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3044 2010/06/28 20:24:49 freddy77 Exp $
+$Id: ChangeLog,v 1.3045 2010/06/29 12:01:17 freddy77 Exp $
